# setuptools-experiment

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
dist_without_venv_glob/: pkg_directory-1.0.0-py3-none-any.whl
pkg_directory/: runner.py
pkg_directory.egg-info/: SOURCES.txt  top_level.txt
pkg_directory.egg-info__without_venv_glob/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
pkg_directory/data/: __init__.py
scripts/: script_1
scripts/sub_pkg/: script_2.py  script_3.py
scripts/sub_pkg/tests/: test_basic_tests.py
tests/: test_basic.py
