[build-system]

#   requires = ["flit_core >=3.4,<4"]
#   build-backend = "flit_core.buildapi"
   requires = [
       "wheel",
       "setuptools @ git+https://github.com/pypa/setuptools@experimental/support-pyproject",
]
   build-backend = "setuptools.build_meta"

[project]
    name = "pkg_directory"
    authors = [
      { name = "Maintainer"},
    ]

    description = "a summary"
    readme = {"file" = "README.md", "content-type" = "text/markdown"}

    dynamic = ["version"]

    license = { file = "LICENSE" }
    requires-python = ">=3.7"

    classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Natural Language :: English",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3",
    ]

    dependencies = [
        "unidiff",
        "zstandard"
    ]


[project.optional-dependencies]
    development = [
        "dataclasses",
        "flake8",
        "flake8-fixme",
        "flake8-print",
        "pre-commit",
        "pytest",
        "pytest-bandit",
        "pytest-cov",
        "pytest-flake8",
        "pytest-forked ",
        "pytest-freeze-reqs",
        "pytest-icdiff",
        "pytest-random-order",
        "pytest-socket",
        "pytest-sugar",
        "pytest-tldr",
    ]

[project.scripts]
    runner = "pkg_directory.runner:chain_runner"

# --------------- tools specific ---------------

[tool.setuptools]
    # package-dir = {"" = "pkg_directory"}
    include-package-data = true

[tool.setuptools.packages]
    # find.where = ["pkg_directory"]
    find.exclude = ["tests", "scripts*", "utils", "venv*"]

    # find.exclude = ["tests", "scripts*", "utils", "venv*"]
    # In order to really remove inclusion of anything under venv:
    #  "venv*",
    # (will get still included to sdist though)

[tool.setuptools.dynamic]
    version = {attr = "pkg_directory.__version__"}

[tool.setuptools.package-data]
    "*" = ["data/*"]

# --------------- pytest ---------------

[tool.pytest.ini_options]
    minversion = 6.0
    addopts = [
        "--bandit",
        "--cov=pkg_directory",
        "--cov-report=term-missing",
        "--flake8",
        "--forked",
        "--no-header",
        "--quiet",
        "--showlocals",
        "--random-order",
        "--random-order-bucket=global",
    ]
